export interface Student {
    matricNumber: string;
    name: string;
    _id: string;
    batch: { batch: string; }[];
}