@startuml

class Student {
    +String id
    +String name
    +int totalPoints
    +List<Badge> badges
    +List<QuizResult> quizResults
    +List<Progress> progress
}

class Group {
    +String id
    +String name
    +int totalMarks
    +List<Student> students
    +Progress groupProgress
}

class Quiz {
    +String id
    +String title
    +String description
    +List<Question> questions
}

class Question {
    +String id
    +String type
    +String questionText
    +List<String> options
    +String correctAnswer
    +int points
    +LikertScale scale
}

class LikertScale {
    +int min
    +int max
    +List<String> labels
}

class QuizResult {
    +String quizId
    +int totalMarks
}

class Response {
    +String id
    +String studentId
    +String quizId
    +List<Answer> responses
    +int totalMarks
}

class Answer {
    +String questionId
    +Object response
    +boolean isCorrect
    +int pointsEarned
}

class Badge {
    +String id
    +String name
    +String description
    +String criteria
}

class Progress {
    +String taskId
    +String taskName
    +String status
    +String deadline
}

Student "1" -- "0..*" QuizResult
Student "1" -- "0..*" Badge
Student "1" -- "0..*" Progress
Group "1" -- "0..*" Student
Group "1" -- "1" Progress
Quiz "1" -- "0..*" Question
Question "0..1" -- "1" LikertScale : optional
Response "1" -- "0..*" Answer
Response "1" -- "1" Student
Response "1" -- "1" Quiz

@enduml
